--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "scripts": {
     "test": "test"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jwerre/ses_template_mailer"
+  },
+  "bugs": {
+    "url": "https://github.com/jwerre/ses_template_mailer/issues"
+  },
   "keywords": [
     "email",
     "transactional email",
