--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Send HTML or plain text templates through Amazon Web Services Simple Email Service (SES) using Handlebars, Pug, EJS or Underscore.",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "./node_modules/.bin/mocha test/email.coffee"
   },
   "repository": {
     "type": "git",
@@ -30,18 +30,19 @@
   "author": "Jonah Werre <jonah@surveyplanet.com> (https://surveyplanet.com)",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.2.45",
-    "ejs": "^2.4.1",
-    "handlebars": "^4.0.5",
-    "html-to-text": "^2.0.0",
-    "is-url": "^1.2.1",
-    "lodash": "^4.6.1",
-    "neo-async": "^1.8.0",
+    "async": "^2.4.1",
+    "aws-sdk": "^2.62.0",
+    "ejs": "^2.5.6",
+    "handlebars": "^4.0.10",
+    "html-to-text": "^3.3.0",
+    "is-url": "^1.2.2",
+    "lodash": "^4.17.4",
     "pug": "^2.0.0-rc.1",
-    "request": "^2.69.0"
+    "request": "^2.81.0"
   },
   "devDependencies": {
     "coffee-script": "^1.10.0",
-    "should": "^8.3.0"
+    "should": "^8.3.0",
+    "mocha": "3.4.2"
   }
 }
